--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
-    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
+    "@trivago/prettier-plugin-sort-imports": "^3.3.0",
     "@types/jest": "^27.5.1",
     "@types/react": "^18.0.9",
     "@types/react-native": "^0.67.7",
@@ -38,6 +38,7 @@
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.67.0",
+    "prettier": "^2.7.1",
     "react-test-renderer": "17.0.2",
     "typescript": "^4.7.2"
   },
