--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/hooks": "^2.8.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "@types/styled-components": "^5.1.25",
@@ -18,12 +19,14 @@
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-config": "^1.4.5",
+    "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^2.4.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "ts-enum-util": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
