--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@react-native-community/hooks": "^2.8.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
+    "@reduxjs/toolkit": "^1.8.3",
+    "@types/lodash": "^4.14.182",
     "@types/styled-components": "^5.1.25",
     "@types/styled-components-react-native": "^5.1.3",
     "axios": "^0.27.2",
+    "lodash": "^4.17.21",
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-config": "^1.4.5",
@@ -25,6 +28,7 @@
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
+    "react-redux": "^8.0.2",
     "styled-components": "^5.3.5",
     "ts-enum-util": "^4.0.2"
   },
