--- a/ios/Podfile
+++ b/ios/Podfile
@@ -19,6 +19,8 @@ target 'playlistApp' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
+  pod 'RNFS', :path => '../node_modules/react-native-fs'
+
   target 'playlistAppTests' do
     inherit! :complete
     # Pods for testing
