--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^6.6.2",
     "@reduxjs/toolkit": "^1.8.3",
     "@types/lodash": "^4.14.182",
+    "@types/react-native-fs": "^2.13.0",
     "@types/styled-components": "^5.1.25",
     "@types/styled-components-react-native": "^5.1.3",
     "axios": "^0.27.2",
@@ -23,6 +24,7 @@
     "react-native": "0.68.2",
     "react-native-config": "^1.4.5",
     "react-native-fast-image": "^8.5.11",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.4.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "^2.8.0",
