--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lodash": "^4.17.21",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-bootsplash": "^4.2.3",
     "react-native-config": "^1.4.5",
     "react-native-fast-image": "^8.5.11",
     "react-native-fs": "^2.20.0",
